--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="HitWall" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\OwoSensations\HitWall.owo;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="LevelFailed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\OwoSensations\LevelFailed.owo;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="MissedNote" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\OwoSensations\MissedNote.owo;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
